# easyinference

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  VALIDATION.md
products/inferscope/: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  VALIDATION.md  conftest.py  pyproject.toml
products/inferscope/.agents/ao/: pending.jsonl
products/inferscope/docs/: AUDIT-TARGET-ARCHITECTURE.md  BENCHMARK-PLAN.md  BENCHMARKS.md  DEPLOYMENT-GUIDE.md  EXAMPLE_RESULTS.md  GPU-MARKET-MAP.md  GPU-REFERENCE.md  INFERENCE-SERVING-REFERENCE.md  KV-CACHE-OBSERVABILITY-v1.0.0.md  MCP_QUICKSTART.md  MODAL_DYNAMO_KIMI.md  PROFILING.md  QUICKSTART.md  UPSTREAM_DYNAMO_PR_DRAFT.md
products/inferscope/docs/examples/: artifact-manifest-example.yaml  benchmark-artifact-baseline.json  benchmark-artifact-candidate.json  benchmark-comparison-example.json  (+9 more)
products/inferscope/tests/: test_benchmark_contract_validation.py  test_benchmark_phases.py  test_benchmark_pipeline_integration.py  test_benchmark_preflight.py  test_benchmark_procedural.py  test_benchmark_runtime.py  test_benchmark_support.py  test_checks.py  test_cli_benchmarks.py  test_cli_entrypoint.py  test_cli_experiments.py  test_cli_global_flags.py  test_cli_profiling.py  test_dynamo_metric_contracts.py  test_dynamo_metrics_fixture.py  test_engine_compilers_nvidia.py  test_engine_registry.py  test_example_results.py  test_failure_taxonomy.py  test_gpu_detector.py  test_kv_cache_math.py  test_model_registry_serving.py  test_normalizer_dynamo_cpu_cache.py  test_normalizer_goodput.py  test_platform_policy.py  test_pmax_scheduler.py  test_profiling_runtime.py  test_prometheus_parser.py  test_recommend_nvidia_platforms.py  test_recommender_matrix.py  test_recommender_rdma.py  test_rollout_diff.py  test_runtime_deployment_context.py  test_security_ssrf.py  test_server_benchmarks.py  test_server_profiling.py  test_telemetry_capture.py  test_tools_runtime_surfaces.py
products/inferscope/validations/: 01-2026-03-23-ai-first-validation.md  02-2026-03-23-benchmark-and-stress-test-plan.md  03-2026-03-25-runtime-profiling-v1.md  04-2026-03-25-hopper-blackwell-hardening.md  05-2026-04-05-lightning-h100-live-smoke.md  06-2026-04-05-modal-a10g-live-smoke.md  07-2026-04-05-kimi-dynamo-reference-corpus.md  08-2026-04-05-modal-preview-lane-validation.md
products/isb1/: LICENSE  Makefile  README.md  pyproject.toml
products/isb1/analysis/: __init__.py  __main__.py  aggregate.py  claim_evaluator.py  comparisons.py  importers.py  leaderboard.py  metrics.py  statistical.py
products/isb1/docs/: ARCHITECTURE.md  CONTRIBUTING.md  ECOSYSTEM.md  METHODOLOGY.md  QUICKSTART.md
products/isb1/harness/: __init__.py  cli.py  client.py  config_validator.py  engine_metrics.py  lockfile.py  manifest.py  paths.py  replay_client.py  runner.py  server.py  sweep.py  telemetry.py  warmup.py
products/isb1/quality/: __init__.py  humaneval_runner.py  mmlu_pro.py  rouge_eval.py  ruler.py
products/isb1/scripts/: download_datasets.sh  download_models.sh  generate_mode_a_configs.py  generate_mode_b_configs.py  generate_traces.py  install_telemetry.sh  isb1.sh  setup_node.sh  validate_results.py
products/isb1/tests/: test_claim_evaluator.py  test_cli_quick_bench.py  test_config_validator.py  test_deep_research_agent.py  test_metrics.py  test_paths.py  test_replay_client.py  test_rl_rollout.py  test_statistical.py  test_trace_materializer.py  test_warmup.py  test_workloads.py
products/isb1/workloads/: __init__.py  agent.py  arrivals.py  base.py  chat.py  coderforge.py  coding.py  datasets.py  deep_research_agent.py  materialize.py  rag.py  rl_rollout.py  swebench.py
(+222 files in other folders)
